--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -42,6 +42,8 @@
     --header-bg: #efefef;
     --row-bg: #fff;
 
+    --icon-color: #e6e6e6;
+
     --scroll-color: #629dd6;
     --scroll-bg-color: #d3d3d3;
     --scroll-wide: 6px;
