Add: select actions

--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -42,6 +42,9 @@
     --header-bg: #efefef;
     --row-bg: #fff;
 
+    --row-active-color: #edf4fb;
+    --icon-active-color: #7799cb;
+
     --icon-color: #e6e6e6;
 
     --scroll-color: #629dd6;
