Add: expand depends

--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -47,6 +47,9 @@
 
     --icon-color: #e6e6e6;
 
+    --depends-bg-color: #f0efee;
+    --depends-icon-color: #d9d8d7;
+
     --scroll-color: #629dd6;
     --scroll-bg-color: #d3d3d3;
     --scroll-wide: 6px;
